--- a/TMC/Views/Shared/_Layout.cshtml
+++ b/TMC/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                         @Html.ActionLink("About", "Index", "About")
                     </li>
                     <li id="services">
-                        @Html.ActionLink("Services", "Index", "Services")
+                        @Html.ActionLink("Services", "Index", "ServiceBoard")
                     </li>
                     <li id="contact">
                         @Html.ActionLink("Contact", "Index", "Contact")
