service boad changes

--- a/TMC/Views/Home/Index.cshtml
+++ b/TMC/Views/Home/Index.cshtml
@@ -12,9 +12,9 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Try My Coupons');"></div>
+            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Local Cord');"></div>
             <div class="carousel-caption">
-                <h1>TMC - A free platform to share your referral coupon codes</h1>
+                <h1> A free platform to fullfill your service needs and sharing trends</h1>
             </div>
         </div>
         <div class="item">
