--- a/TMC/Views/ServiceBoard/Index.cshtml
+++ b/TMC/Views/ServiceBoard/Index.cshtml
@@ -32,34 +32,31 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <div class="col-lg-12">
-                <h1 class="page-header col-lg-9">
-                    @Model.Name
-                    <small>(@Model.SeoTitle.Replace("-", " "))  </small>
-                </h1>
-                <div class="col-lg-3">
-                    <a href="#">
-                        <img src="@Url.Content( "~/img/" + @Model.ImageURL)" />
-                    </a>
-                </div>
-
-            </div>
-
+            <h1 class="page-header">
+                Service Board@*@Model.Name*@
+                <small>(@Model.SeoTitle.Replace("-", " "))  </small>
+            </h1>
             <ol class="breadcrumb ">
                 <li>
                     @Html.ActionLink("Home", "Index", "Home")
                 </li>
                 <li>
-                    @Html.ActionLink("Coupon Board", "Index", "CouponBoard")
+                    @Html.ActionLink("Service Board", "Index", "CouponBoard")
                 </li>
                 <li class="active">@(@Model.Name + " coupons")</li>
             </ol>
         </div>
     </div>
+
     <div class="row" id="divProductContent">
         <div class="col-lg-11">
-            <p>@Model.Description <a href="@Model.SiteURL"></a></p>
-            <label id="lblProductContent">@Html.Raw(@Model.Content)</label>
+            @*<p>@Model.Description <a href="@Model.SiteURL"></a></p>*@
+            <p>
+                Post your service needs and current trends to the board. The service requirement will be shared to the appropriate vendors or so called service
+                providers. We recomend to pull down the requirement once the same is serviced.
+            </p>
+
+            @* <label id="lblProductContent">@Html.Raw(@Model.Content)</label>*@
         </div>
         <div class="col-lg-1">
             <div id="addUpdateProduct">
@@ -68,7 +65,72 @@
 
         </div>
     </div>
-    <div class="row" id="divProductEditorContent" style="display: none">
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <h3> Current service needs and trends in your locality</h3>
+        </div>
+        <div class="col-md-12">
+            <div class="  mygrid-wrapper-div" id="divProductEditorContent">
+                This is the place for requirement tiles to be displaye
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                sdf
+                sdfsd
+                f
+                sf
+
+
+            </div>
+        </div>
+    </div>
+    <div class="row" id="divRequirementEditorContent" style="display: none">
         <div class="col-lg-12">
             <div id="addUpdateProducts">
                 <div id="btnSaveCoupon" class="btn btn-link btn-sm pull-right">Save Details</div>
@@ -88,11 +150,23 @@
         </div>
 
     </div>
-   
+
     <div class="row">
+        <div class="col-sm-12">
+            <div class="header-bar cursor" data-toggle="collapse" data-target="#requirementEditor">
+                <h3>Post your requirement here!<i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i></h3>
+
+                @* <button type="button" id="hamburger" class="navbar-toggle" data-toggle="collapse" data-target="#requirementEditor">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>*@
+            </div>
+        </div>
+    </div>
+    <div class="row" id="requirementEditor">
         <div class="col-sm-8">
-            <h3>Post your requirement here. Some one will be looking on it soon!</h3>
-             
+
             <form action="contact-form-submission.php" method="POST" role="form">
                 <div class="row">
                     <div class="  col-sm-8">
@@ -135,15 +209,314 @@
             </form>
         </div>
         <div class="col-sm-4">
-            
-            <div class=" col-sm-12">
+
+            <div class="">
                 <h3>All Available Tags</h3>
                 <label for="input4">Select tags from here</label>
                 <textarea id="input4" rows="21" class="form-control" name="contact_message"></textarea>
             </div>
         </div>
     </div>
+    
+    
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="header-bar cursor" >
+                <h3>Vendors in your area</h3>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                        <li>One</li>
+                        <li>Two</li>
+                        <li>Three</li>
+                    </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                        <li>One</li>
+                        <li>Two</li>
+                        <li>Three</li>
+                    </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                        <li>One</li>
+                        <li>Two</li>
+                        <li>Three</li>
+                    </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                        <li>One</li>
+                        <li>Two</li>
+                        <li>Three</li>
+                    </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                        <li>One</li>
+                        <li>Two</li>
+                        <li>Three</li>
+                    </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+        <div class="col-lg-12">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+       @* <div class="col-md-12">
+            <h3> Vendors for the service in your locality</h3>
+        </div>*@
+        <div class="col-md-12">
+            <div class="  mygrid-wrapper-div1" id="divProductEditorContent">
+
+                <div class="row">
+                    <div class="col-md-1">
+                        <p>
+                            <i class="fa fa-file-text fa-4x"></i>
+                        </p>
+                        <p>May 24, 2013</p>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="@Url.Action("Post")">
+                            <img class="img-responsive" src="http://placehold.it/600x300">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>
+                            <a href="@Url.Action("Post")">A Blog Home Template for Bootstrap 3</a>
+                        </h3>
+                        <p>
+                            by <a href="#">Start Bootstrap</a>
+                        </p>
+                        <p>This is a very basic starter template for a blog homepage. It makes use of Font Awesome icons that are built into the 'Modern Business' template, and it makes use of the Bootstrap 3 pager at the bottom of the page.</p>
+                        dfsd kkk")" class="btn btn-primary">Show More <i class="fa fa-angle-right"></i>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
+    </div>
 </div>
 
+<script type="text/javascript">
 
+    $(function () {
+        var window_height = $(window).height(),
+           content_height = window_height - 200;
+
+        $('.mygrid-wrapper-div').height(content_height);
+    });
+
+    $(window).resize(function () {
+        var window_height = $(window).height(),
+           content_height = window_height - 200;
+        $('.mygrid-wrapper-div').height(content_height);
+    });
+
+    function toggleChevron(e) {
+        $(e.target)
+            .find("i.indicator")
+            .toggleClass('glyphicon-chevron-down glyphicon-chevron-up');
+    }
+    $('#requirementEditor').on('.collapse', toggleChevron);
+</script>
 
