--- a/TMC/css/modern-business.css
+++ b/TMC/css/modern-business.css
@@ -185,3 +185,25 @@ footer {
  /* increases the carousel height so it looks good on phones */
   }
 }
+
+.mygrid-wrapper-div {
+    
+    overflow: scroll;
+    border-color: #ededed;
+  border-style: solid;
+  border-width: 0 1px 4px 1px;
+}
+
+.header-bar {
+padding: 1px 0px 1px 6px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  list-style: none;
+  background-color: #fafafa;
+  border-radius: 4px;
+  border-color: #ededed;
+  border-style: solid;
+  border-width: 0 1px 4px 1px;
+}
+
+ 
