--- a/TMC/Views/ServiceBoard/Index.cshtml
+++ b/TMC/Views/ServiceBoard/Index.cshtml
@@ -90,6 +90,9 @@
                 <br />
                 <br />
                 <br />
+                <br />dsfsdfsdf
+                fasdf
+                asdf
                 <br />
                 <br />
                 <br />
@@ -98,28 +101,19 @@
                 <br />
                 <br />
                 <br />
+                sdf
                 <br />
                 <br />
                 <br />
                 <br />
                 <br />
+                sdfsdf tsdfasdfsadf
                 <br />
                 <br />
                 <br />
                 <br />
                 <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
+     
                 <br />
                 sdf
                 sdfsd
@@ -227,7 +221,40 @@
         </div>
     </div>
     
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+    <div class="row" >
+        <div class="col-lg-12  trending-card">
+
+            <div class="col-md-3">
+                <a href="/Coupons/paytm-coupons-cashback-offers">
+                    <img src="/img/image_payTM.jpg">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>
+                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
+                </h3>
+                <p>
+                    updated by <a href="#">TMC</a> on May 24, 2013
+                </p>
+                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
+
+                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
+
+            </div>
+            <div class="col-md-4" style="padding-top: 10px">
+                <p>
+                    Fee coupons for ICICI50 and many more
+                </p><ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row trending-card">
         <div class="col-lg-12">
 
             <div class="col-md-3">
@@ -251,16 +278,16 @@
                 <p>
                     Fee coupons for ICICI50 and many more
                 </p><ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                    </ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
                 <p></p>
             </div>
         </div>
     </div>
     
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+    <div class="row trending-card">
         <div class="col-lg-12">
 
             <div class="col-md-3">
@@ -284,16 +311,16 @@
                 <p>
                     Fee coupons for ICICI50 and many more
                 </p><ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                    </ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
                 <p></p>
             </div>
         </div>
     </div>
     
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+    <div class="row trending-card">
         <div class="col-lg-12">
 
             <div class="col-md-3">
@@ -317,16 +344,16 @@
                 <p>
                     Fee coupons for ICICI50 and many more
                 </p><ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                    </ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
                 <p></p>
             </div>
         </div>
     </div>
     
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+    <div class="row trending-card">
         <div class="col-lg-12">
 
             <div class="col-md-3">
@@ -350,49 +377,16 @@
                 <p>
                     Fee coupons for ICICI50 and many more
                 </p><ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                    </ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ul>
                 <p></p>
             </div>
         </div>
     </div>
     
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
-        <div class="col-lg-12">
-
-            <div class="col-md-3">
-                <a href="/Coupons/paytm-coupons-cashback-offers">
-                    <img src="/img/image_payTM.jpg">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>
-                    <a href="/Coupons/paytm-coupons-cashback-offers">PayTM</a>
-                </h3>
-                <p>
-                    updated by <a href="#">TMC</a> on May 24, 2013
-                </p>
-                <p> Paytm is Indias largest mobile commerce platform. Paytm started by offering mobile recharge and utility bill payments and today it offers a full marketplace to consumers on its mobile apps. We have over 20mn registered users. In a short span of time Paytm has scaled to more than 15 Million orders per month.</p>
-
-                <a href="/Coupons/paytm-coupons-cashback-offers">Show all PayTM coupons </a>
-
-            </div>
-            <div class="col-md-4" style="padding-top: 10px">
-                <p>
-                    Fee coupons for ICICI50 and many more
-                </p><ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                    </ul>
-                <p></p>
-            </div>
-        </div>
-    </div>
-    
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+    <div class="row trending-card">
         <div class="col-lg-12">
 
             <div class="col-md-3">
@@ -425,7 +419,7 @@
         </div>
     </div>
 
-    <div class="row" style="border: 1px solid #dfdfdf; padding: 5px">
+    <div class="row trending-card">
         <div class="col-lg-12">
 
             <div class="col-md-3">
@@ -458,10 +452,10 @@
         </div>
     </div>
 
-    <div class="row">
-       @* <div class="col-md-12">
-            <h3> Vendors for the service in your locality</h3>
-        </div>*@
+    <div class="row trending-card">
+        @* <div class="col-md-12">
+                <h3> Vendors for the service in your locality</h3>
+            </div>*@
         <div class="col-md-12">
             <div class="  mygrid-wrapper-div1" id="divProductEditorContent">
 
