--- a/TMC/css/modern-business.css
+++ b/TMC/css/modern-business.css
@@ -206,4 +206,7 @@ padding: 1px 0px 1px 6px;
   border-width: 0 1px 4px 1px;
 }
 
- 
+ .trending-card {
+     border: 1px solid #dfdfdf; 
+     
+ }
