--- a/TMC/Views/Shared/_Layout.cshtml
+++ b/TMC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <img src="/img/lc_logo.jpg" class="logo img-responsive">
                 <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
                 @Html.ActionLink("Local Cord", "Index", new { controller = "Home" }, new { @class = "navbar-brand" })
             </div>
