--- a/TMC/css/modern-business.css
+++ b/TMC/css/modern-business.css
@@ -210,3 +210,10 @@ padding: 1px 0px 1px 6px;
      border: 1px solid #dfdfdf; 
      
  }
+
+ .logo {
+  background-position: -167px -360px;
+  height: 40px;
+  width: 40px;
+  float: left
+ }
