--- a/TMC/Views/Shared/_Layout.cshtml
+++ b/TMC/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
             <div class="container horizontal-line" style="padding-bottom: 15px;">
                 <div class="row">
                     <div class="col-8 footer-section">
-                        <a class="footer-logo" href="http://www.coupondunia.in/"><img src="http://www.coupondunia.in/theme/Elegance/img/bottom-footer-logo.png"></a><br>
+                        <a class="footer-logo" href="http://www.localcord.com/"><img src="http://www.localcord.com/theme/Elegance/img/bottom-footer-logo.png"></a><br>
                         <div class="col-22" style="padding-left: 0 ;padding-top : 25px">CouponDunia, India’s #1 Coupon Website, helps you save money through its comprehensive listing of coupons, offers, deals &amp; discounts. Whether it’s shopping from top online brands or eating at your favourite local restaurants, CouponDunia provides you multiple options for easy saving and smart shopping!</div>
                     </div>
 
@@ -133,12 +133,12 @@
                                 <div class="list">
                                     <ul>
                                         <li><a class="" href="http://www.coupondunia.in">Home</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/stores">Stores</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/contact">Contact</a></li>
+                                        <li><a class="" href="http://www.localcord.com/stores">Stores</a></li>
+                                        <li><a class="" href="http://www.localcord.com/contact">Contact</a></li>
                                         <li><a class="" href="http://careers.coupondunia.in/" target="_blank">Careers</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/blog" target="_blank">Blog</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/merchant-stores">Merchants</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/sitemap">Sitemap</a></li>
+                                        <li><a class="" href="http://www.localcord.com/blog" target="_blank">Blog</a></li>
+                                        <li><a class="" href="http://www.localcord.com/merchant-stores">Merchants</a></li>
+                                        <li><a class="" href="http://www.localcord.com/sitemap">Sitemap</a></li>
                                     </ul>
                                 </div>
 
@@ -146,12 +146,12 @@
                             <div class="col-12">
                                 <div class="list">
                                     <ul>
-                                        <li><a class="" href="http://www.coupondunia.in/press">Press</a></li>
+                                        <li><a class="" href="http://www.localcord.com/press">Press</a></li>
                                         <li><a class="" href="http://gosf.coupondunia.in" target="_blank">GOSF</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/privacy-policy">Privacy Policy &amp; Opt Out</a></li>
-                                        <li><a class="" href="http://coupondunia.in/merchants">List your Business on CD</a></li>
-                                        <li><a class="" href="http://coupondunia.in/restaurants">List your Restaurant on CD</a></li>
-                                        <li><a class="" href="http://www.coupondunia.in/terms">Terms of Service</a></li>
+                                        <li><a class="" href="http://www.localcord.com/privacy-policy">Privacy Policy &amp; Opt Out</a></li>
+                                        <li><a class="" href="http://coupondunia.in/merchants">List your Business on LC</a></li>
+                                        <li><a class="" href="http://coupondunia.in/restaurants">List your Restaurant on LC</a></li>
+                                        <li><a class="" href="http://www.localcord.com/terms">Terms of Service</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
 
                     <div class="col-8 footer-section">
                         <div class="heading-text">Subscribe for more updates</div> <br>
-                        <form method="post" action="http://www.coupondunia.in/add-email-subscription" id="" class="newsletterform">
+                        <form method="post" action="http://www.localcord.com/add-email-subscription" id="" class="newsletterform">
                             <div class="pull-up" style="margin-bottom: 10px;">
                                 <input type="text" placeholder="Type email address" name="Email" class="form-control">
                             </div>
@@ -168,7 +168,7 @@
                             <input name="WebsiteID" value="0" type="hidden">
                             <input name="Newsletter" value="true" type="hidden">
                             <div class="clearfix">
-                                <button id="couponSubmitButton" class="btn btn-primary pull-right" style="position: relative;">
+                                <button id="cordSubmitButton" class="btn btn-primary pull-right" style="position: relative;">
                                     <span>COUNT ME IN</span>
                                     <div id="loader-btn" style="display: none;" class="loaded">
                                         <div class="bar"></div>
@@ -188,22 +188,22 @@
             <div class="container horizontal-line">
                 <div class="row">
                     <div class="col-6 footer-section text-center">
-                        <img src="http://www.coupondunia.in/theme/Elegance/img/cdstats-ico1.png">
+                        <img src="http://www.localcord.com/theme/Elegance/img/cdstats-ico1.png">
                         <p class="text-center big-text">1680858</p> <br>
                         <p class="text-center small-detail-text">Coupons used last month</p>
                     </div>
                     <div class="col-6 footer-section text-center">
-                        <img src="http://www.coupondunia.in/theme/Elegance/img/cdstats-ico2.png">
+                        <img src="http://www.localcord.com/theme/Elegance/img/cdstats-ico2.png">
                         <p class="text-center big-text">1876</p> <br>
                         <p class="text-center small-detail-text">online stores</p>
                     </div>
                     <div class="col-6 footer-section text-center">
-                        <img src="http://www.coupondunia.in/theme/Elegance/img/cdstats-ico3.png">
+                        <img src="http://www.localcord.com/theme/Elegance/img/cdstats-ico3.png">
                         <p class="text-center big-text">4044</p> <br>
                         <p class="text-center small-detail-text">Restaurant Outlets</p>
                     </div>
                     <div class="col-6 footer-section text-center">
-                        <img src="http://www.coupondunia.in/theme/Elegance/img/cdstats-ico4.png">
+                        <img src="http://www.localcord.com/theme/Elegance/img/cdstats-ico4.png">
                         <p class="text-center big-text">6663919</p> <br>
                         <p class="text-center small-detail-text">Subscribers</p>
                     </div>
@@ -216,14 +216,14 @@
                 <div class="row">
                     <div class="col-14" style="padding-top: 10px">
                         <div class="col-10" style="padding-left: 0"><span></span></div>
-                        <div class="copyright">© 2015 TryMyCoupons.com All Rights Reserved.</div>
+                        <div class="copyright">© 2015 LocalCord.com All Rights Reserved.</div>
                     </div>
                     <div class="col-10">
                         <div class="text-right" style="margin: 0px">
 
-                            <a href="https://www.facebook.com/TryMyCoupons/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.coupondunia.in/theme/Elegance/img/fb-footer-ico.png" height="30"></a>
-                            <a href="https://twitter.com/TryMyCoupons/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.coupondunia.in/theme/Elegance/img/twitter-footer-ico.png" height="30"></a>
-                            <a href="https://plus.google.com/+TryMyCoupons/posts" target="_blank" rel="nofollow"><img src="http://www.coupondunia.in/theme/Elegance/img/gplus-footer-ico.png" height="30"></a>
+                            <a href="https://www.facebook.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.localcord.com/theme/Elegance/img/fb-footer-ico.png" height="30"></a>
+                            <a href="https://twitter.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.localcord.com/theme/Elegance/img/twitter-footer-ico.png" height="30"></a>
+                            <a href="https://plus.google.com/+LocalCord/posts" target="_blank" rel="nofollow"><img src="http://www.localcord.com/theme/Elegance/img/gplus-footer-ico.png" height="30"></a>
                         </div>
                     </div>
 
@@ -232,26 +232,23 @@
             </div>
         </div>@*
 
-        <div class="international-footer">
-            <div class="container ">
-                <div class="row">
+    <div class="international-footer">
+        <div class="container ">
+            <div class="row">
 
-                    <div class="horizontal-list text-center">
-                        <ul>
-                            <li class="bold-text">International Sites : </li>
-                            <li><a href="http://www.coupondunia.co.id/" target="_blank">CouponDunia Indonesia</a></li>
-                            <li><a href="http://www.cupomworld.com.br/" target="_blank">CupomWorld (Brazil)</a></li>
-                            <li><a href="http://www.kodybony.pl/" target="_blank">KodyBony (Poland)</a></li>
-                            <li><a href="http://www.kupontime.com/" target="_blank">KuponTime (Turkey)</a></li>
-
-                        </ul>
-                    </div>
+                <div class="horizontal-list text-center">
+                    <ul>
+                        <li class="bold-text">International Sites : </li>
+                        <li><a href="http://www.localcord.co.us/" target="_blank">Local cord USA</a></li>
+                        <li><a href="http://www.localcord.com.ca/" target="_blank">LocalCord (Canada)</a></li>
+                    </ul>
                 </div>
             </div>
-        </div>*@
+        </div>
+    </div>*@
     </div>
    
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="@Url.Content("/js/bootstrap.js")"></script>
         @*<script src="@Url.Content("/js/modern-business.js")"></script>*@
         @Scripts.Render("~/bundles/jquery")
