contact page modified

--- a/TMC/Views/About/Index.cshtml
+++ b/TMC/Views/About/Index.cshtml
@@ -17,21 +17,95 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
-        <img src="http://placehold.it/750x450" class="img-responsive">
+    <div class="col-md-4">
+        <img src="~/img/LC_logo_sm.jpg" class="img-responsive" />
     </div>
-    <div class="col-md-6">
-        <h2>Welcome to 'Modern Business'</h2>
-        <p>This is a great place to introduce your company or project and describe what you do. This about page features general company information, employee bios, and other helpful elements.</p>
-        <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+    <div class="col-md-8">
+        <h2>Welcome to 'LocalCord'</h2>
+        <p>LocalCord, India’s first service platform website, which helps you connect to the service experts near your locality which we call your cord. The service experts or providers and the consumers like you are connected to the cord near you. Each cord is having a local board in which the customer places the needs 
+            and the service eperts picks up the leads. Our service experts or vendors are constantly monitoring any requirements
+            and needs being posted on the local board. 
+            </p>
+        <p>Apart from posting the service needs you can use the board to post the current trends in your locality.The board is same as the facebook wall except it is open to all the users of the locality or cord. The local attractive deals and the referal coupons can be posted
+        here and the platform helps you to let the users use your referal code thus benefitting you.</p>
     </div>
 </div>
 <!-- Team Member Profiles -->
 <div class="row">
     <div class="col-lg-12">
-        <h2 class="page-header">Our Team</h2>
+        <h2 class="page-header">Our Main Operation Verticals</h2>
     </div>
     <div class="col-sm-4">
+        <img src="~/img/vendor_consumer.jpg" class="img-responsive">
+        <h3>
+            Service Needs
+            <small>where the vendor meets the consumer</small>
+        </h3>
+        <p>The platform helps the consumers post there service needs to their local board which is in constant monitoring of the service experts fo the 
+        locality or cord. You can directly meet the service providers who operates in your locality. </p>
+        <ul class="list-unstyled list-inline list-social-icons">
+            <li class="tooltip-social facebook-link">
+                <a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-profile"><i class="fa fa-facebook-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social linkedin-link">
+                <a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-profile"><i class="fa fa-linkedin-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social twitter-link">
+                <a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social google-plus-link">
+                <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-sm-4">
+        <img src="~/img/deals_images.jpg" class="img-responsive">
+        <h3>
+            Local Deals
+            <small>where you share the currents deal trends in your locality or cord</small>
+        </h3>
+        <p>Now as days we never want to pay the full. What if you get a platform where you can share the current deals or trends in your area. In the mean while 
+        the new users who gets the deal information and uses your referral code and you get your referral bonus.</p>
+        <ul class="list-unstyled list-inline list-social-icons">
+            <li class="tooltip-social facebook-link">
+                <a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-profile"><i class="fa fa-facebook-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social linkedin-link">
+                <a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-profile"><i class="fa fa-linkedin-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social twitter-link">
+                <a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social google-plus-link">
+                <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-sm-4">
+        <img src="~/img/whiteboard.jpg" class="img-responsive">
+        <h3>
+            Hangout
+            <small>The public sharing board of your locality</small>
+        </h3>
+        <p>The local bnoard of your locality provides you a space fot posting free adds for your business to attracts customers or post new
+            ideas and get suggestions. You can ask for any common information of your locality only the persons of your locality or close to your locality
+        can answer.</p>
+        <ul class="list-unstyled list-inline list-social-icons">
+            <li class="tooltip-social facebook-link">
+                <a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-profile"><i class="fa fa-facebook-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social linkedin-link">
+                <a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-profile"><i class="fa fa-linkedin-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social twitter-link">
+                <a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a>
+            </li>
+            <li class="tooltip-social google-plus-link">
+                <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
+            </li>
+        </ul>
+    </div>
+@*    <div class="col-sm-4">
         <img src="http://placehold.it/750x450" class="img-responsive">
         <h3>
             John Smith
@@ -96,73 +170,7 @@
                 <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
             </li>
         </ul>
-    </div>
-    <div class="col-sm-4">
-        <img src="http://placehold.it/750x450" class="img-responsive">
-        <h3>
-            John Smith
-            <small>Job Title</small>
-        </h3>
-        <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-        <ul class="list-unstyled list-inline list-social-icons">
-            <li class="tooltip-social facebook-link">
-                <a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-profile"><i class="fa fa-facebook-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social linkedin-link">
-                <a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-profile"><i class="fa fa-linkedin-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social twitter-link">
-                <a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social google-plus-link">
-                <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
-            </li>
-        </ul>
-    </div>
-    <div class="col-sm-4">
-        <img src="http://placehold.it/750x450" class="img-responsive">
-        <h3>
-            John Smith
-            <small>Job Title</small>
-        </h3>
-        <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-        <ul class="list-unstyled list-inline list-social-icons">
-            <li class="tooltip-social facebook-link">
-                <a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-profile"><i class="fa fa-facebook-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social linkedin-link">
-                <a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-profile"><i class="fa fa-linkedin-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social twitter-link">
-                <a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social google-plus-link">
-                <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
-            </li>
-        </ul>
-    </div>
-    <div class="col-sm-4">
-        <img src="http://placehold.it/750x450" class="img-responsive">
-        <h3>
-            John Smith
-            <small>Job Title</small>
-        </h3>
-        <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-        <ul class="list-unstyled list-inline list-social-icons">
-            <li class="tooltip-social facebook-link">
-                <a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-profile"><i class="fa fa-facebook-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social linkedin-link">
-                <a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-profile"><i class="fa fa-linkedin-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social twitter-link">
-                <a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a>
-            </li>
-            <li class="tooltip-social google-plus-link">
-                <a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-profile"><i class="fa fa-google-plus-square fa-2x"></i></a>
-            </li>
-        </ul>
-    </div>
+    </div>*@
 </div>
 <!-- Our Customers -->
 <div class="row">
