--- a/TMC/Views/Contact/Index.cshtml
+++ b/TMC/Views/Contact/Index.cshtml
@@ -45,21 +45,23 @@
             </form>
         </div>
         <div class="col-sm-4">
-            <h3>Modern Business</h3>
-            <h4>A Start Bootstrap Template</h4>
-            <p>
-                5555 44th Street N.<br>
-                Bootstrapville, CA 32323<br>
-            </p>
-            <p><i class="fa fa-phone"></i> <abbr title="Phone">P</abbr>: (555) 984-3600</p>
-            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a></p>
-            <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
-            <ul class="list-unstyled list-inline list-social-icons">
+            <h3>LocalCord</h3>
+            <h4>The one stop for all your needs</h4>
+            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:localcord@gmail.com">care@localcord.com</a></p>
+   @*         <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-page"><i class="fa fa-facebook-square fa-2x"></i></a></li>
                 <li class="tooltip-social linkedin-link"><a title="LinkedIn" data-placement="top" data-toggle="tooltip" href="#linkedin-company-page"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
                 <li class="tooltip-social twitter-link"><a title="Twitter" data-placement="top" data-toggle="tooltip" href="#twitter-profile"><i class="fa fa-twitter-square fa-2x"></i></a></li>
                 <li class="tooltip-social google-plus-link"><a title="Google+" data-placement="top" data-toggle="tooltip" href="#google-plus-page"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
-            </ul>
+            </ul>*@
+            <div class="col-10">
+                <div class="text-right" style="margin: 0px">
+                    <a href="https://www.facebook.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="~/img/fb_color_ico.png" height="30"></a>
+                    <a href="https://twitter.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="~/img/twitter_color_ico.png" height="30"></a>
+                    <a href="https://plus.google.com/+LocalCord/posts" target="_blank" rel="nofollow"><img src="~/img/instagram_color_ico.png" height="30"></a>
+                    <a href="https://youtube.com/LocalCord" target="_blank" rel="nofollow"><img src="~/img/pintrest_color_ico.png" height="30"></a>
+                </div>
+            </div>
         </div>
     </div><!-- /.row -->
 </div>
