--- a/TMC/Views/Shared/_Layout.cshtml
+++ b/TMC/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         @Html.ActionLink("About", "Index", "About")
                     </li>
                     <li id="services">
-                        @Html.ActionLink("Services", "Index", "ServiceBoard")
+                        @Html.ActionLink("Services", "Index", "LocalBoard")
                     </li>
                     <li id="contact">
                         @Html.ActionLink("Contact", "Index", "Contact")
@@ -120,8 +120,9 @@
             <div class="container horizontal-line" style="padding-bottom: 15px;">
                 <div class="row">
                     <div class="col-8 footer-section">
-                        <a class="footer-logo" href="http://www.localcord.com/"><img src="http://www.localcord.com/theme/Elegance/img/bottom-footer-logo.png"></a><br>
-                        <div class="col-22" style="padding-left: 0 ;padding-top : 25px">CouponDunia, India’s #1 Coupon Website, helps you save money through its comprehensive listing of coupons, offers, deals &amp; discounts. Whether it’s shopping from top online brands or eating at your favourite local restaurants, CouponDunia provides you multiple options for easy saving and smart shopping!</div>
+                        <a class="" href="http://www.localcord.com/"><img class="footer-logo " src="~/img/LC_logo_sm.jpg"></a><br>
+                        <div class="col-22" style="padding-left: 0 ;padding-top : 25px">LocalCord, India’s first service platform website, which helps you connect to the service experts near your locality which we call your cord. Our service experts are connected to the cord near you and constantly monitoring any 
+                        requirements and needs nbeing posted on the local board!</div>
                     </div>
 
                     <div class="col-8 footer-section">
@@ -132,10 +133,10 @@
 
                                 <div class="list">
                                     <ul>
-                                        <li><a class="" href="http://www.coupondunia.in">Home</a></li>
+                                        <li><a class="" href="http://www.localcords.com">Home</a></li>
                                         <li><a class="" href="http://www.localcord.com/stores">Stores</a></li>
                                         <li><a class="" href="http://www.localcord.com/contact">Contact</a></li>
-                                        <li><a class="" href="http://careers.coupondunia.in/" target="_blank">Careers</a></li>
+                                        <li><a class="" href="http://careers.localcord.com/" target="_blank">Careers</a></li>
                                         <li><a class="" href="http://www.localcord.com/blog" target="_blank">Blog</a></li>
                                         <li><a class="" href="http://www.localcord.com/merchant-stores">Merchants</a></li>
                                         <li><a class="" href="http://www.localcord.com/sitemap">Sitemap</a></li>
@@ -146,8 +147,7 @@
                             <div class="col-12">
                                 <div class="list">
                                     <ul>
-                                        <li><a class="" href="http://www.localcord.com/press">Press</a></li>
-                                        <li><a class="" href="http://gosf.coupondunia.in" target="_blank">GOSF</a></li>
+                                        <li><a class="" href="http://www.localcord.com/press">Press</a></li> 
                                         <li><a class="" href="http://www.localcord.com/privacy-policy">Privacy Policy &amp; Opt Out</a></li>
                                         <li><a class="" href="http://coupondunia.in/merchants">List your Business on LC</a></li>
                                         <li><a class="" href="http://coupondunia.in/restaurants">List your Restaurant on LC</a></li>
@@ -220,10 +220,10 @@
                     </div>
                     <div class="col-10">
                         <div class="text-right" style="margin: 0px">
-
-                            <a href="https://www.facebook.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.localcord.com/theme/Elegance/img/fb-footer-ico.png" height="30"></a>
-                            <a href="https://twitter.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.localcord.com/theme/Elegance/img/twitter-footer-ico.png" height="30"></a>
-                            <a href="https://plus.google.com/+LocalCord/posts" target="_blank" rel="nofollow"><img src="http://www.localcord.com/theme/Elegance/img/gplus-footer-ico.png" height="30"></a>
+                            <a href="https://www.facebook.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.localcord.com/img/fb_ico.png" height="30"></a>
+                            <a href="https://twitter.com/LocalCord/" target="_blank" rel="nofollow" style="padding-right: 10px;"><img src="http://www.localcord.com/img/twitter_ico.png" height="30"></a>
+                            <a href="https://plus.google.com/+LocalCord/posts" target="_blank" rel="nofollow"><img src="http://www.localcord.com/img/gplus_ico.png" height="30"></a>
+                            <a href="https://youtube.com/LocalCord" target="_blank" rel="nofollow"><img src="http://www.localcord.com/img/youtube_ico.png" height="30"></a>
                         </div>
                     </div>
 
